--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GoSurf</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="./favicon/site.webmanifest">
+    <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
@@ -237,7 +244,7 @@
                         </div>
                     </div>
                     <div class="shore__bak-lay _ibg">
-                        <img src="./img/shore/Surf_The_Wave.png" alt="Surf on the Wave">
+                        <img loading="lazy" src="./img/shore/Surf_The_Wave.png" alt="Surf on the Wave">
                     </div>
                 </div>
             </section>
@@ -260,7 +267,7 @@
                                     <div class="world-box__slider-card card-slider">
                                         <div class="card-slider__box">
                                             <div class="card-slider__world-map">
-                                                <img src="./img/surf/World_Map_Dots.svg" alt="Map">
+                                                <img loading="lazy" src="./img/surf/World_Map_Dots.svg" alt="Map">
                                             </div>
                                             <div id="malibu" class="card-slider__lable">
                                                 <div class="card-slider__pointer">
@@ -453,7 +460,7 @@
                                     <div class="beach-slider__line">
                                         <div id="beach-1" class="beach-slider__slide">
                                             <div class="beach-slider__image">
-                                                <img src="./img/surf/malibu_beach.png" alt="Malibu">
+                                                <img loading="lazy" src="./img/surf/malibu_beach.png" alt="Malibu">
                                             </div>
                                             <div class="beach-slider__cover">
                                                 <div class="beach-slider__btn">
@@ -473,7 +480,7 @@
                                         </div>
                                         <div id="beach-2" class="beach-slider__slide beach-slider__slide-active">
                                             <div class="beach-slider__image">
-                                                <img src="./img/surf/airline_beach.png" alt="Airline">
+                                                <img loading="lazy" src="./img/surf/airline_beach.png" alt="Airline">
                                             </div>
                                             <div class="beach-slider__cover beach-slider__cover-active">
                                                 <div class="beach-slider__btn  beach-slider__btn-active">
@@ -493,7 +500,7 @@
                                         </div>
                                         <div id="beach-3" class="beach-slider__slide">
                                             <div class="beach-slider__image">
-                                                <img src="./img/surf/cloud_nine.png" alt="Cloud Nine">
+                                                <img loading="lazy" src="./img/surf/cloud_nine.png" alt="Cloud Nine">
                                             </div>
                                             <div class="beach-slider__cover">
                                                 <div class="beach-slider__btn">
@@ -513,7 +520,7 @@
                                         </div>
                                         <div id="beach-4" class="beach-slider__slide">
                                             <div class="beach-slider__image">
-                                                <img src="./img/surf/vieux_boucau.png" alt="Vieux">
+                                                <img loading="lazy" src="./img/surf/vieux_boucau.png" alt="Vieux">
                                             </div>
                                             <div class="beach-slider__cover">
                                                 <div class="beach-slider__btn">
@@ -533,7 +540,7 @@
                                         </div>
                                         <div id="beach-5" class="beach-slider__slide">
                                             <div class="beach-slider__image">
-                                                <img src="./img/surf/la_torche.png" alt="La Tourche">
+                                                <img loading="lazy" src="./img/surf/la_torche.png" alt="La Tourche">
                                             </div>
                                             <div class="beach-slider__cover">
                                                 <div class="beach-slider__btn">
@@ -584,7 +591,7 @@
                             <div class="travel__main-content travel__main-content-active">
                                 <div class="travel__place place-travel">
                                     <div class="place-travel__place-image">
-                                        <img src="./img/travel/airlie-beach.png" alt="Beach">
+                                        <img loading="lazy" src="./img/travel/airlie-beach.png" alt="Beach">
                                         <div class="place-travel__cover-image"></div>
                                     </div>
                                     <div class="place-travel__titles">
@@ -648,7 +655,7 @@
                             <div class="travel__main-content travel__main-content-abs">
                                 <div class="travel__place place-travel">
                                     <div class="place-travel__place-image">
-                                        <img src="./img/travel/arica-beach.png" alt="Beach">
+                                        <img loading="lazy" src="./img/travel/arica-beach.png" alt="Beach">
                                         <div class="place-travel__cover-image"></div>
                                     </div>
                                     <div class="place-travel__titles">
@@ -712,7 +719,7 @@
                             <div class="travel__main-content travel__main-content-abs">
                                 <div class="travel__place place-travel">
                                     <div class="place-travel__place-image">
-                                        <img src="./img/travel/vieux-beach.png" alt="Beach">
+                                        <img loading="lazy" src="./img/travel/vieux-beach.png" alt="Beach">
                                         <div class="place-travel__cover-image"></div>
                                     </div>
                                     <div class="place-travel__titles">
@@ -776,7 +783,7 @@
                             <div class="travel__main-content travel__main-content-abs">
                                 <div class="travel__place place-travel">
                                     <div class="place-travel__place-image">
-                                        <img src="./img/travel/kansai-beach.png" alt="Beach">
+                                        <img loading="lazy" src="./img/travel/kansai-beach.png" alt="Beach">
                                         <div class="place-travel__cover-image"></div>
                                     </div>
                                     <div class="place-travel__titles">
@@ -839,7 +846,7 @@
                             <div class="travel__main-content travel__main-content-abs">
                                 <div class="travel__place place-travel">
                                     <div class="place-travel__place-image">
-                                        <img src="./img/travel/malibu-beach.png" alt="Beach">
+                                        <img loading="lazy" src="./img/travel/malibu-beach.png" alt="Beach">
                                         <div class="place-travel__cover-image"></div>
                                     </div>
                                     <div class="place-travel__titles">
@@ -924,7 +931,7 @@
                             <div class="sleep__main-content sleep__main-content-active">
                                 <div class="sleep__place place-sleep">
                                     <div class="place-sleep__place-image">
-                                        <img src="./img/sleep/airlie-sleep.png" alt="Beach">
+                                        <img loading="lazy" src="./img/sleep/airlie-sleep.png" alt="Beach">
                                         <div class="place-sleep__cover-image"></div>
                                     </div>
                                     <div class="place-sleep__titles">
@@ -997,7 +1004,7 @@
                             <div class="sleep__main-content sleep__main-content-abs">
                                 <div class="sleep__place place-sleep">
                                     <div class="place-sleep__place-image">
-                                        <img src="./img/sleep/arica-sleep.png" alt="Beach">
+                                        <img loading="lazy" src="./img/sleep/arica-sleep.png" alt="Beach">
                                         <div class="place-sleep__cover-image"></div>
                                     </div>
                                     <div class="place-sleep__titles">
@@ -1071,7 +1078,7 @@
                             <div class="sleep__main-content sleep__main-content-abs">
                                 <div class="sleep__place place-sleep">
                                     <div class="place-sleep__place-image">
-                                        <img src="./img/sleep/vieux-sleep.png" alt="Beach">
+                                        <img loading="lazy" src="./img/sleep/vieux-sleep.png" alt="Beach">
                                         <div class="place-sleep__cover-image"></div>
                                     </div>
                                     <div class="place-sleep__titles">
@@ -1145,7 +1152,7 @@
                             <div class="sleep__main-content sleep__main-content-abs">
                                 <div class="sleep__place place-sleep">
                                     <div class="place-sleep__place-image">
-                                        <img src="./img/sleep/kansai-sleep.png" alt="Beach">
+                                        <img loading="lazy" src="./img/sleep/kansai-sleep.png" alt="Beach">
                                         <div class="place-sleep__cover-image"></div>
                                     </div>
                                     <div class="place-sleep__titles">
@@ -1218,7 +1225,7 @@
                             <div class="sleep__main-content sleep__main-content-abs">
                                 <div class="sleep__place place-sleep">
                                     <div class="place-sleep__place-image">
-                                        <img src="./img/sleep/malibu-sleep.png" alt="Beach">
+                                        <img loading="lazy" src="./img/sleep/malibu-sleep.png" alt="Beach">
                                         <div class="place-sleep__cover-image"></div>
                                     </div>
                                     <div class="place-sleep__titles">
@@ -1338,7 +1345,7 @@
                                         <div class="board-surf__visual">
                                             <div class="board-surf__visual-box">
                                                 <div class="board-surf__board">
-                                                    <img src="./img/shop/Surfboard-1.png" alt="Surf board">
+                                                    <img loading="lazy" src="./img/shop/Surfboard-1.png" alt="Surf board">
                                                 </div>
                                                 <div id="shape" class="board-surf__tips">
                                                     <div class="board-surf__pointer">-</div>
@@ -1377,7 +1384,7 @@
                                 </div>
                                 <div class="shop__back-image">
                                     <div class="shop__image">
-                                        <img src="./img/shop/wave-1.jpg" alt="wave">
+                                        <img loading="lazy" src="./img/shop/wave-1.jpg" alt="wave">
                                         <div class="shop__image-gradient"></div>
                                     </div>
                                 </div>
@@ -1409,7 +1416,7 @@
                                         <div class="board-surf__visual">
                                             <div class="board-surf__visual-box">
                                                 <div class="board-surf__board">
-                                                    <img src="./img/shop/foam-surfboard-500-7.png" alt="Surf board">
+                                                    <img loading="lazy" src="./img/shop/foam-surfboard-500-7.png" alt="Surf board">
                                                 </div>
                                                 <div id="shape" class="board-surf__tips">
                                                     <div class="board-surf__pointer">-</div>
@@ -1448,7 +1455,7 @@
                                 </div>
                                 <div class="shop__back-image">
                                     <div class="shop__image">
-                                        <img src="./img/shop/wave-2.jpg" alt="wave">
+                                        <img loading="lazy" src="./img/shop/wave-2.jpg" alt="wave">
                                         <div class="shop__image-gradient"></div>
                                     </div>
                                 </div>
@@ -1480,7 +1487,7 @@
                                         <div class="board-surf__visual">
                                             <div class="board-surf__visual-box">
                                                 <div class="board-surf__board">
-                                                    <img src="./img/shop/foam-surfboard-400-9-gold.png" alt="Surf board">
+                                                    <img loading="lazy" src="./img/shop/foam-surfboard-400-9-gold.png" alt="Surf board">
                                                 </div>
                                                 <div id="shape" class="board-surf__tips">
                                                     <div class="board-surf__pointer">-</div>
@@ -1519,7 +1526,7 @@
                                 </div>
                                 <div class="shop__back-image">
                                     <div class="shop__image">
-                                        <img src="./img/shop/wave-3.jpg" alt="wave">
+                                        <img loading="lazy" src="./img/shop/wave-3.jpg" alt="wave">
                                         <div class="shop__image-gradient"></div>
                                     </div>
                                 </div>
